--- a/style.css
+++ b/style.css
@@ -1237,24 +1237,23 @@ body {
   animation-delay: 4s;
 }
 
-.birthday-message2 {
+.birthday-messages {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 6em;
+  font-size: 1.8em; /* Change this to adjust the font size */
   color: white;
   padding: 20px;
   border-radius: 10px;
   text-align: center;
-  z-index: 10; /* Ensure it floats above other elements */
-  overflow: hidden; /* To contain the pseudo-element */
-  font-size: 1rem;
-  text-justify: auto; /* Add Tailwind's text-justify utility */
+  z-index: 10;
+  overflow: hidden;
+  text-justify: auto;
 }
 
 
-.birthday-message2::before {
+.birthday-messages::before {
   content: '';
   position: absolute;
   top: 0;
@@ -1268,16 +1267,16 @@ body {
 
 }
 
-.birthday-message2 > div {
+.birthday-messages > div {
   opacity: 0;
   animation: fadeInText 5s forwards;
 }
 
-.birthday-message2 > div:nth-child(1) {
+.birthday-messages > div:nth-child(1) {
   animation-delay: 4s;
 }
 
-.birthday-message2 > div:nth-child(2) {
+.birthday-messages > div:nth-child(2) {
   animation-delay: 4s;
 }
 
